lib/tests/fixtures/compiler/parser/break_in_relationship.baseline
Error: break_in_relationship.pp:2:28: break statement cannot be used inside a relationship expression.
  File[foo] -> if true { break }
                         ^~~~~
