lib/tests/fixtures/compiler/parser/break_in_relationship.pp
[].each |$x| {
    File[foo] -> if true { break }
}
